optimizations refactoring WIP crafter redo